fixed the bootstrap navbar to stretch across the screen. Changed the height/padding of the banner/title.

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -524,7 +524,7 @@ ul.contact li a.icon-rss:before {
 /*********************************************************************************/
 
 #banner {
-    padding-top: 1em;
+    padding-top: 5em;
     text-align: center;
 }
 
